--- a/MLV/templates/main.html
+++ b/MLV/templates/main.html
@@ -8,6 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <style>
   .information_container{
@@ -37,17 +38,35 @@
 <body>
   <div class="container" style="padding-top:30px;">
   <div class="title" style="padding-top: 10px; padding-bottom: 10px;">
-    <h1>Welcome to Venn-diaNet</h1>
+	<h1>Welcome to Venn-diaNet</h1> 
+	<a href="https://github.com/hurben/VenndiaNet"><font size=3><i class="fa fa-github" aria-hidden="true"></i> VenndiaNet</font></a>
+
+	&emsp;
+	<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/VenndiaNet_Manual_v2.pdf">Manual</a>
+	&emsp; 
+	<font color="blue">Citation</font><br>
+
+
 	<!--
     <span class="small">Benjamin Hur, Dongwon Kang, Sangseon Lee, Ji hwan Moon, and Sun Kim</span>
 	-->
   </div>
+
+  <!--modified: 19.09.02 
 
 	<div class="col-md-12" style="padding-top: 10px; padding-left:1px; padding-bottom:10px;">
 		<strong><font size="4"> Test Sets : </font></strong>
 		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7+E2.WT.txt" download>EXPERIMENT 1</a> 
 		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7.WT.txt" download>EXPERIMENT 2</a>  
 		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/WT+E2.WT.txt" download>EXPERIMENT 3</a> <br>
+	</div>
+  -->
+
+	<div class="col-md-12" style="padding-top: 10px; padding-left:1px; padding-bottom:10px;">
+		<strong><font size="4"> Test Sets : </font></strong>
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7+E2.WT.v1.txt" download>EXPERIMENT 1</a> 
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/E6E7.WT.v1.txt" download>EXPERIMENT 2</a>  
+		<a href="//bhi2.snu.ac.kr/MLV_PUBLIC/dataset/WT+E2.WT.v1.txt" download>EXPERIMENT 3</a> <br>
 	</div>
 
 
@@ -80,13 +99,18 @@
 
  <div class="information_container">
  	<div class="image_container">
+		<b>Venn-diaNet</b>, a Venn diagram based analysis framework that uses network propagation upon PPI (protein-protein interaction) network to prioritizes genes from experiments that have multiple DEG lists.<br>
+		Venn-diaNet is especially useful when researchers tries to: <br>
+		[1] prioritize genes that are located in the segments in the Venn diagram (especially, intersection). <br>
+		[2] Evaluate which genes are more impacted by the combination of treatments. <br>
+		[3] Compare multiple lists of DEGs at once. <br>
 		<img src="//bhi2.snu.ac.kr/MLV_static/img/Venndianet_workflow.png" style="width: 100%; object-fit: contain"/>
 	</div>
 	<div class="manual_container">
+		<!--
 	 <font color="blue">Manual</font> <br>
 	 <font color="blue">Citation</font><br>
-	 <font color="blue">Test</font><br>
-
+-->
 	</div>
  </div>
 
